cambios en el scrol image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/f92ba764dc.js" crossorigin="anonymous"></script>
     <title>Hacienda</title>
+    <style>
+      
+    </style>
   </head>
   <body>
     <div id="root"></div>
